--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -407,8 +407,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "id": "8ec2f935-cebd-484b-b9de-af506b0be57f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[56.0, 50.0, 97.0, 7.0, 0],\n",
+       " [47.0, 30.0, 41.0, 73.0, 0],\n",
+       " [65.0, 73.0, 57.0, 46.0, 0]]"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "means_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "e2954f7d-70d9-4654-a3ef-f2ff134e2cb2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('svm', 'xgboost'),\n",
+       " ('xgboost', 'f_statistic'),\n",
+       " ('svm', 'xgboost', 'f_statistic')]"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "method_combinations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "f69d0464-2c58-4c48-be61-e68f7e6ba2dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "means_list2 = [mean + [len(group_name)] for mean, group_name in zip(means_list, method_combinations)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "ed73a25d-a2dc-47c0-9566-2de5e62fbf84",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[56.0, 50.0, 97.0, 7.0, 0, '0', 2.0, 2],\n",
+       " [47.0, 30.0, 41.0, 73.0, 0, '0', 2.0, 2],\n",
+       " [65.0, 73.0, 57.0, 46.0, 0, '0', 2.0, 3]]"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "means_list2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "1f38e5fc-43ff-4ea6-8a4d-e29f37e3c6f3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "metrics_names = method_combinations + [('number of methods')]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "a9a35ddb-88b4-4264-956b-9047cbc20640",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('svm', 'xgboost'),\n",
+       " ('xgboost', 'f_statistic'),\n",
+       " ('svm', 'xgboost', 'f_statistic'),\n",
+       " 'number of methods']"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "metrics_names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7407c38d-facd-4476-895a-316f134707db",
    "metadata": {},
    "outputs": [],
    "source": []
